@@ -19,6 +19,10 @@ remctl 3.8 (unreleased)
 
     Fix a minor memory leak in the server when processing help commands.
 
+    Use a temporary file and atomic rename when writing the server PID
+    file to avoid racing with a process monitor that tries to read the PID
+    out of the file before it's written.
+
 remctl 3.7 (2014-01-06)
 
     Fix a client memory leak when remctl_set_ccache is used with a
